testdata/invalid/permute_invalid_08.lisp
;;error:3:22-27:unresolved symbol
(defconst X 100)
(defpermutation (Y) ((+ X)))
